PROBABLY UNSAFE Modified ASM and CPP to load from OG image and save to processed image.

--- a/QtCircularApp/QtCircularApp.vcxproj
+++ b/QtCircularApp/QtCircularApp.vcxproj
@@ -73,6 +73,7 @@
     <ClCompile>
       <AdditionalIncludeDirectories>C:\Users\sikor\source\repos\QtCircularSOL\Circus;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>None</DebugInformationFormat>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
